--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activityCompose = "1.8.0"
 composeBom = "2024.04.01"
 room = "2.6.1"
 testCoreKtxVersion = "1.6.1"
+ktorVersion = "2.3.12"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -31,6 +32,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "testCoreKtxVersion" }
+ktor-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktorVersion" }
+ktor-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktorVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
